VP 10.6.0 Changelog
------------------------
- add support for showing the image of a primitve mesh in the editor. However this feature is far from perfect because Windows GDI, that draws the elements in the editor, can't handle meshes well.

- re-use existing sound settings if re-importing a sound file

- fix crash in collection manager if a collection is moved up/down

- fix ball decal splotches if only a global ball image was set in the video preferences

- new table-script manipulation features:
  '-extractvbs' parameter: "VPinballX -extractvbs tablename.vpx" extracts the script and exits
  VPX will automatically replace the table-script with a vbs file named the same as the table file (similar to the existing pov file functionality)

- add support for using a primitive as playfield instead of the build-in one:
    o to create a mesh playfield create a new blank table and export it as obj file
    o open the obj file in Blender and edit the playfield mesh (mesh name is "Table1")
    o cut holes into the playfield where you want to place kickers, VUKs and so on
    o export the modified playfield mesh as a separate obj file and import it to VPX
    o in VPX rename the playfield primitive to "playfield_mesh"
    o the playfield primitive doesn't need an image and a material. VPX will use the texture and material from the playfield properties

    Note: VP can only handle a simple mesh plate (with optional holes) as a playfield. Adding other complicated meshes to the playfield (e.g. merge kicker meshes with the playfield) is not supported.
          The "playfield_mesh" is also handled as a special primitive type: its physics settings are copied from the table physics properties, but in addition you can also set "Has Hit Event" and set a "Hit Threshold"
          if you want to be informed that the ball has hit the playfield. Settings like "Toy", "Collidable" or "Overwrite Material Settings" won't work for the "playfield_mesh".